--- a/.gitignore
+++ b/.gitignore
@@ -4,29 +4,29 @@
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
 # Logs
-#ClientApp/logs
-#ClientApp/*.log
-#ClientApp/npm-debug.log*
-#ClientApp/yarn-debug.log*
-#ClientApp/yarn-error.log*
-#ClientApp/pnpm-debug.log*
-#ClientApp/lerna-debug.log*
+ClientApp/logs
+ClientApp/*.log
+ClientApp/npm-debug.log*
+ClientApp/yarn-debug.log*
+ClientApp/yarn-error.log*
+ClientApp/pnpm-debug.log*
+ClientApp/lerna-debug.log*
 
-#ClientApp/node_modules
-#ClientApp/dist
-#ClientApp/dist-ssr
-#ClientApp/*.local
+ClientApp/node_modules
+ClientApp/dist
+ClientApp/dist-ssr
+ClientApp/*.local
 
 # Editor directories and files
-#ClientApp/.vscode/*
-#ClientApp/!.vscode/extensions.json
-#.idea
-#ClientApp/.DS_Store
-#ClientApp/*.suo
-#ClientApp/*.ntvs*
-#ClientApp/*.njsproj
-#ClientApp/*.sln
-#ClientApp/*.sw?
+ClientApp/.vscode/*
+ClientApp/!.vscode/extensions.json
+ClientApp/.idea
+ClientApp/.DS_Store
+ClientApp/*.suo
+ClientApp/*.ntvs*
+ClientApp/*.njsproj
+ClientApp/*.sln
+ClientApp/*.sw?
 
 # User-specific files
 *.rsuser
@@ -311,7 +311,7 @@ FakesAssemblies/
 
 # Node.js Tools for Visual Studio
 .ntvs_analysis.dat
-#node_modules/
+node_modules/
 
 # Visual Studio 6 build log
 *.plg
