--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "ConnectionStrings": {
+    "ServerName": "mysql",
+    "UserName": "root",
+    "UserPass": "root_pwd",
+    "Port": "3306",
+    "Database": "Biopark"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
